--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -83,7 +83,7 @@
                     <div class="card-footer">
                         <p class="card-text">
 
-                            <a class="btn btn-success float-start m-4 text-white" asp-controller="Orders" asp-action="AddModelToShoppingCart" asp-route-id="@Model.Id">
+                            <a class="btn btn-success float-start m-4 text-white" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@Model.Id">
                                 <i class="bi bi-cart-plus"></i>Add to Cart(price @Model.Price.ToString("c"))
                             </a>
                             <a class="btn btn-outline-primary float-end  mt-4" asp-action="Index">
