--- a/Views/Orders/ShoppingCart.cshtml
+++ b/Views/Orders/ShoppingCart.cshtml
@@ -30,10 +30,10 @@
                         <td class="align-middle">@((item.Amount * item.Movie.Price).ToString("c"))</td>
                         <td class="align-middle">
                             <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromCart"
-                             asp-route-id="@item.Movie.Id">
-                             <i class="bg bi-cart-dash"></i>
-                             </a>
-                             |
+                           asp-route-id="@item.Movie.Id">
+                                <i class="bg bi-cart-dash"></i>
+                            </a>
+                            |
                             <a class="text-success" asp-controller="Orders" asp-action="AddItemToShoppingCart"
                            asp-route-id="@item.Movie.Id">
                                 <i class="text-white bg bi-cart-plus"></i>
@@ -54,10 +54,12 @@
                 </tr>
             </tfoot>
         </table>
-        
-        <div class="text-center">
+
+        <div class="text-right">
             <div class="btn-group">
-                 <a class="btn btn-outline-primary" asp-action="CompleteOrder">Complete Order</a>
+                @*<a class="btn btn-outline-primary" asp-action="CompleteOrder">Complete Order</a>*@
+                <div id="paypal-btn"> </div>
+                <span style="padding:5px"></span>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
@@ -66,4 +68,45 @@
 
     </div>
 
-</div>     
+</div>
+@section Scripts{
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <script>
+        let _total = @Html.Raw(@Model.ShoppingCartTotal);
+        paypal.Button.render({
+            //Configure the environment
+            env: 'sandbox',
+            client: {
+                sandbox: 'AV5Lt0xAY5rWrrgucua2EuCuwALa5IDBFaCqfxUmCX-GQGtuMAiDmPu-xkHeF7MNGflrDEFqB2KdFLI5'
+
+            },
+            //Customize  the button
+            locale: 'en_US',
+            style: {
+                size: 'small',
+                color: 'gold',
+                shape: 'pill'
+            },
+            commit: true,
+
+            //setup the payment
+            payment: function (data, actions) {
+                return actions.payment.create({
+                    transactions: [{
+                        amount: {
+                            total: _total,
+                            currency: 'USD'
+                        }
+                    }]
+                });
+            },
+            //Execute the payment
+            onAuthorize: function (data, actions) {
+                return actions.payment.execute().then(function () {
+                    var url = '@Url.Action("CompleteOrder", "Orders", new{ })';
+                    window.location.href = url;
+                });
+            }
+        }, '#paypal-btn');
+    </script>
+}
